--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   "license": "ISC",
   "dependencies": {
     "angular2": "2.0.0-beta.16",
-    "systemjs": "0.19.26",
+    "bootstrap": "^3.3.6",
     "es6-shim": "^0.35.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
+    "systemjs": "0.19.26",
     "zone.js": "0.6.12"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
     "lite-server": "^2.2.0",
     "typescript": "^1.8.10",
-    "typings":"^0.8.1"
+    "typings": "^0.8.1"
   }
 }
